6693490: (se) select throws "File exists" IOException under load (lnx) Reviewed-by: sherman, darcy Contributed-by: Backport by Igor Chernyshev <igorc@google.com>